[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Sam Wlody <swlody@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
aoc-main = { git = "https://github.com/swlody/aoc", branch = "main" }